Implement template tag evaluation, update readme and docs

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,3 +8,7 @@ tasks:
       - go mod tidy
       - go build .
       - go test -count=1 -v .
+
+  test:
+    cmds:
+      - go run ./cmd/vuego testdata/pages/forecast.vuego testdata/json/forecast.json
