--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,15 +7,24 @@ vars:
   toolchain: '{{.goversion}}+auto'
 
 tasks:
-  default:
+  fmt:
+    desc: "Format code and tidy dependencies"
     cmds:
       - goimports -w .
+      - go fmt ./...
       - go mod tidy
+
+  default:
+    deps:
+      - fmt
+    cmds:
       - go build .
       - go test -count=1 -v .
 
   test:
     desc: "Run tests and collect coverage"
+    deps:
+      - fmt
     env:
       GOTOOLCHAIN: '{{.toolchain}}'
     cmds:
