Tweak v-html support and file funcmap

--- a/.vale.ini
+++ b/.vale.ini
@@ -2,5 +2,8 @@ StylesPath = .vale/styles
 MinAlertLevel = error
 Vocab = tech
 
-[*.md]
+[docs/*.md]
+BasedOnStyles = write-good
+
+[README.md]
 BasedOnStyles = write-good
