Generate vuego templates with vuego, literal attributes with []

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,7 +29,8 @@ tasks:
   default:
     desc: "Run the playground server"
     cmds:
-      - go run ./cmd/vuego-playground
+      - go install ./cmd/vuego-playground
+      - vuego-playground
 
   lint:
     desc: "Lint codebase"
