--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,6 +29,7 @@ tasks:
   default:
     desc: "Run the playground server"
     cmds:
+      - go install ./cmd/vuego
       - go install ./cmd/...
       - vuego-playground
 
