--- a/atkins.yml
+++ b/atkins.yml
@@ -5,45 +5,8 @@ name: Vuego CI pipeline
 
 vars:
   name: vuego
-  path: ./cmd/vuego
-  build:
-    goarch: [arm64, amd64]
-
-env:
-  vars:
-    GIT_COMMIT: $(git rev-parse HEAD)
-    GIT_BRANCH: $(git rev-parse --abbrev-ref HEAD)
-    GIT_TAG: $(git describe --tags --always --dirty 2>/dev/null || echo "no-tag")
-    GIT_TIME: $(git log -1 --format="format:%aI")
-    GIT_STATUS: $(git status --porcelain | wc -l)
 
 jobs:
-  release:
-    desc: "Release vuego"
-    steps:
-      - task: install
-      - ./ci/release.yml build
-      - ./ci/release.yml test
-      - ./ci/release.yml publish
-
-  install:
-    desc: "Install ${{name}}"
-    depends_on: fmt
-    vars:
-      goos: linux
-    steps:
-      - for: goarch in ${{build.goarch}}
-        env:
-          vars:
-            CGO_ENABLED: 0
-            GOOS: ${{ goos }}
-            GOARCH: ${{ goarch }}
-        run: go build -ldflags="-X 'main.Version=${GIT_TAG}' -X 'main.Commit=${GIT_COMMIT}' -X 'main.CommitTime=${GIT_TIME}' -X 'main.Branch=${GIT_BRANCH}' -X 'main.Modified=${GIT_MODIFIED}'" -o bin/${{name}}-${GOOS}-${GOARCH} ${{path}}
-      - cmds:  # This implements a rename based self-update
-          - cp -f ./bin/${{name}}-linux-$(dpkg --print-architecture) /usr/local/bin/${{name}}.new
-          - mv -f /usr/local/bin/${{name}} /usr/local/bin/${{name}}.old
-          - mv -f /usr/local/bin/${{name}}.new /usr/local/bin/${{name}}
-
   fmt:
     desc: "Format the code"
     steps:
@@ -55,8 +18,16 @@ jobs:
   test:
     depends_on: fmt
     steps:
+      - task: lint
       - task: test:build
       - task: test:run
+
+  lint:
+    desc: "Lint the code"
+    parallel: true
+    steps:
+      - go-fsck lint ./... --exclude imports
+      - golangci-lint run --fix ./...
 
   test:build:
     desc: "Build tests"
@@ -66,14 +37,10 @@ jobs:
   test:run:
     desc: "Run built tests"
     steps:
-      - task: docker:up
       - rm -rf coverage
       - for: item in $(ls ./bin/*.test | xargs -n1 basename)
         task: test:detail
         detach: true
-      - name: cleanup
-        task: docker:down
-        deferred: true
 
   test:detail:
     dest: "Collect per-function test runs"
@@ -83,13 +50,3 @@ jobs:
       - for: funcName in $(./bin/${{ item }} -test.list ^Test.)
         summarize: true
         run: ./bin/${{ item }} -test.coverprofile "./coverage/${{item}}/${{ funcName }}.cov" -test.run "^${{ funcName }}$"
-
-  docker:up:
-    desc: "Bring up docker env"
-    steps:
-      - docker compose up -d --wait --remove-orphans
-
-  docker:down:
-    desc: "Bring down docker env"
-    steps:
-      - docker compose down
