--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,46 +5,11 @@ includes:
   mdox: ./Taskfile.mdox.yml
   gofsck: ./Taskfile.gofsck.yml
 
-vars:
-  goversion:
-    sh: go env GOVERSION
-  toolchain: '{{.goversion}}+auto'
-
 tasks:
-  fmt: atkins fmt
-  lint: atkins lint
-
-  fmt:docs:
-    desc: "Format docs"
-    cmds:
-      - task: mdox:fmt
-
   default:
     desc: "Run the dev server"
     cmds:
-      - task: test
-      - task: cover
-
-  test:
-    desc: "Run tests and collect coverage"
-    env:
-      GOTOOLCHAIN: '{{.toolchain}}'
-    cmds:
-      - task: fmt
-      - task: lint
-      - go test -failfast -count=1 -cover -coverpkg=./... -coverprofile=pkg.cov ./...
-
-  cover:
-    desc: "Show source coverage"
-    cmds:
-      - go-fsck extract . --include-sources
-      - go-fsck docs > docs/api.md
-      - go tool cover -func=pkg.cov | summary coverfunc --json > pkg.cov.json
-      - go-fsck extract --pretty-json ./...
-      - go-fsck coverage -c pkg.cov.json -o go-fsck.json
-      - go-fsck coverage --template=docs/testing-coverage.md.tpl -v > docs/testing-coverage.md
-      - perl -pi -e 's/github.com\/titpetric/titpetric/g' docs/testing-coverage.md
-      - task: fmt:docs
+      - atkins
 
   uncover:
     desc: "Show uncovered source"
