--- a/atkins.yml
+++ b/atkins.yml
@@ -13,6 +13,7 @@ jobs:
       - task: fmt
       - task: lint
       - task: test
+      - task: cover
 
   fmt:
     desc: "Format the code"
@@ -31,5 +32,19 @@ jobs:
 
   test:
     desc: "Run built tests"
+    passthru: true
     steps:
-      - go test -count=1 -cover -coverpkg=./... -coverprofile=pkg.cov ./...
+      - go test -count 1 -cover -coverpkg=./... -coverprofile=pkg.cov -json ./... > test.json
+      - cat test.json | gotestsum
+
+  cover:
+    desc: "Show source coverage"
+    steps:
+      - go-fsck extract . --include-sources
+      - go-fsck docs > docs/api.md
+      - go tool cover -func=pkg.cov | summary coverfunc --json > pkg.cov.json
+      - go-fsck extract --pretty-json ./...
+      - go-fsck coverage -c pkg.cov.json -o go-fsck.json
+      - go-fsck coverage --template=docs/testing-coverage.md.tpl -v > docs/testing-coverage.md
+      - perl -pi -e 's/github.com\/titpetric/titpetric/g' docs/testing-coverage.md
+      - task mdox:fmt
