--- a/atkins.yml
+++ b/atkins.yml
@@ -34,6 +34,7 @@ jobs:
   test:
     desc: "Run built tests"
     passthru: true
+    tty: true
     steps:
       - go test -cover -coverpkg=./... -coverprofile=pkg.cov -json ./... > test.json
       - cat test.json | gotestsum
